--- a/login/index.html
+++ b/login/index.html
@@ -80,7 +80,7 @@ document.getElementById("loginBtn").onclick = async () => {
       status.textContent = "Login OK";
       localStorage.setItem("sessionUser", account.username);
       localStorage.setItem("sessionRole", account.role);
-      location.href = "https://andy-and-terry.github.io/hwss/main/"; // uncomment when ready
+      location.href = "https://andy-and-terry.github.io/learningforeveryone/user/"; // uncomment when ready
     } else {
       status.textContent = "Wrong password";
     }
@@ -93,3 +93,4 @@ document.getElementById("loginBtn").onclick = async () => {
 </script>
 
 </body>
+
