--- a/user/index.html
+++ b/user/index.html
@@ -1,16 +1,13 @@
 <<!DOCTYPE html>
 <html>
 <head>
-  <title>TMB Social</title>
+  <title>Assignments</title>
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-<!--
-<h1>TMB Social</h1>
-<p>Discover creations from the TMB community</p>
-<div id="feed"></div>
-<script src="assets/js/loadProjects.js"></script>
--->
-<p>This service has temperoraily been halted.</p>
+  <h1>Assignments</h1>
+  <p><em>Select one...</em></p>
+  <div id="feed"></div>
+  <script src="assets/js/loadItems.js"></script>
 </body>
 </html>
