--- a/user/view.html
+++ b/user/view.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>View Project</title>
+  <title>View Assignment</title>
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-<div id="project"></div>
-<script src="assets/js/viewProject.js"></script>
+  <div id="project"></div>
+  <script src="assets/js/viewItem.js"></script>
 </body>
 </html>
