--- a/user/index.html
+++ b/user/index.html
@@ -9,5 +9,9 @@
   <p><em>Select one...</em></p>
   <div id="feed"></div>
   <script src="assets/js/loadItems.js"></script>
+  <hr>
+  <a href="#" onclick="localStorage.clear(); location.href='https://andy-and-terry.github.io/learningforeveryone/; return false;">
+  Sign out
+</a>
 </body>
 </html>
