--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
 </head>
 <body>
     <p><a href="login/">If you are not redirected automatically, follow this link to the new page.</a></p>
+    <noscript>
+        <p>Please enable Javascript otherwise the software will not work...</p>
+    </noscript>
 </body>
 </html>
+
