--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta http-equiv="refresh" content="0; url=login/index.html">
     <title>Homework Sharing Service</title>
+    <script>
+        document.addEventListener('contextmenu', event => event.preventDefault());
+    </script>
 </head>
 <body>
     <p><a href="login/">If you are not redirected automatically, follow this link to the new page.</a></p>
@@ -11,4 +14,5 @@
     </noscript>
 </body>
 </html>
+
 
