--- a/user/index.html
+++ b/user/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Assignments</title>
   <link rel="stylesheet" href="assets/css/style.css">
+  <script defer src="assets/js/main.js"></script>
 </head>
 <body>
   <h1>Assignments</h1>
