--- a/user/view.html
+++ b/user/view.html
@@ -3,6 +3,7 @@
 <head>
   <title>View Assignment</title>
   <link rel="stylesheet" href="assets/css/style.css">
+  <script defer src="assets/js/main.js"></script>
 </head>
 <body>
   <div id="project"></div>
