--- a/login/index.html
+++ b/login/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<script defer src="assets/js/main.js"></script>
 	<link rel="stylesheet" href="assets/css/main.css">
+	<script defer src="drc.js"></script>
 	<title>Login to platform</title>
 </head>
 <body>
@@ -93,4 +94,5 @@ document.getElementById("loginBtn").onclick = async () => {
 </script>
 
 </body>
+
 
