--- a/login/reset.html
+++ b/login/reset.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-<!--<script defer src="assets/js/reset.js">-->
+	<script defer src="drc.js"></script>
 	<link rel="stylesheet" href="assets/css/reset.css">
 </head>
 <body>
@@ -14,4 +14,5 @@
 	<h3>Option 2:</h3>
 	<p>Use <a href="">Form</a> to submit request; teacher will be notified</p>
 	<hr>
+
 </body>
