--- a/user/index.html
+++ b/user/index.html
@@ -11,8 +11,8 @@
   <div id="feed"></div>
   <script src="assets/js/loadItems.js"></script>
   <hr>
-  <a href="#" onclick="localStorage.clear(); location.href='https://andy-and-terry.github.io/learningforeveryone/; return false;">
-  Sign out
+  <p></p><a href="#" onclick="localStorage.clear(); location.href='https://andy-and-terry.github.io/learningforeveryone/; return false;">
+  Sign out</a></p>
 </a>
 </body>
 </html>
