--- a/user/index.html
+++ b/user/index.html
@@ -11,7 +11,7 @@
   <div id="feed"></div>
   <script src="assets/js/loadItems.js"></script>
   <hr>
-  <p></p><a href="#" onclick="localStorage.clear(); location.href='https://andy-and-terry.github.io/learningforeveryone/; return false;">
+  <p><a href="#" onclick="localStorage.clear(); location.href='https://andy-and-terry.github.io/learningforeveryone/; return false;">
   Sign out</a></p>
 </a>
 </body>
