--- a/user/index.html
+++ b/user/index.html
@@ -4,6 +4,11 @@
   <title>Assignments</title>
   <link rel="stylesheet" href="assets/css/style.css">
   <script defer src="assets/js/main.js"></script>
+  <script>
+if (!localStorage.getItem("sessionUser")) {
+  location.href = "https://andy-and-terry.github.io/learningforeveryone";
+}
+</script>
 </head>
 <body>
   <h1>Assignments</h1>
