--- a/login/index.html
+++ b/login/index.html
@@ -6,6 +6,9 @@
 	<link rel="stylesheet" href="assets/css/main.css">
 	<script defer src="drc.js"></script>
 	<title>Login to platform</title>
+	<script>
+		localStorage.clear();
+	</script>
 </head>
 <body>
 	<body>
@@ -94,5 +97,6 @@ document.getElementById("loginBtn").onclick = async () => {
 </script>
 
 </body>
+
 
 
