--- a/user/view.html
+++ b/user/view.html
@@ -4,6 +4,11 @@
   <title>View Assignment</title>
   <link rel="stylesheet" href="assets/css/style.css">
   <script defer src="assets/js/main.js"></script>
+   <script>
+if (!localStorage.getItem("sessionUser")) {
+  location.href = "https://andy-and-terry.github.io/learningforeveryone";
+}
+</script>
 </head>
 <body>
   <div id="project"></div>
