--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta http-equiv="refresh" content="0; url=login/index.html">
     <title>Homework Sharing Service</title>
-    <script>
-        document.addEventListener('contextmenu', event => event.preventDefault());
-    </script>
+    <link rel="stylesheet" href="assets/css/main.css">
+    <script defer src="assets/js/drc.js"></script>
 </head>
 <body>
     <p><a href="login/">If you are not redirected automatically, follow this link to the new page.</a></p>
@@ -14,5 +13,6 @@
     </noscript>
 </body>
 </html>
+
 
 
