--- a/index.html
+++ b/index.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta http-equiv="refresh" content="0; url=login/index.html">
     <title>Homework Sharing Service</title>
     <link rel="stylesheet" href="assets/css/main.css">
     <script defer src="assets/js/drc.js"></script>
 </head>
 <body>
-    <p><a href="login/">If you are not redirected automatically, follow this link to the new page.</a></p>
-    <noscript>
-        <p>Please enable Javascript otherwise the software will not work...</p>
-    </noscript>
+<h1>Learning for everyone</h1>
+<br>
+<p><a href="login/">Login</a></p>
+<hr>
+<section id="why">
+<h3>Why we do this</h3>
+<p>1. We think that everyone has the right to learn</p>
+</section>
+<hr>
+<section id="about">
+<h3>How we did this</h3>
+<p>1. We were inspired by other platforms like <a href="https://www.classdojo.com/">Classdojo</a>, <a href="https://www.learning.moe.edu.sg/">SLS</a> and <a href="https://www.koobits.com/">Koobits.</p>
+<p>2. We asked for help from <a href="https://www.w3schools.com/">w3schools</a> and <a href="https://github.com">Github</a> to make this possible.</p>
+</section>
+<hr>
+<section id="footer">
+<footer>Let's all learn together!</footer>
+</section>
 </body>
-</html>
-
-
-
