--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <h1>Learning for everyone</h1>
 <br>
-<p><a href="login/">Login</a></p>
+<p><a href="login/">Login</a> <a href="help/">Help</a></p>
 <hr>
 <section id="why">
 <h3>Why we do this</h3>
@@ -25,3 +25,4 @@
 <footer>Let's all learn together!</footer>
 </section>
 </body>
+
