--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="en">
 <head>
     <title>Homework Sharing Service</title>
@@ -25,4 +25,26 @@
 <footer>Let's all learn together!</footer>
 </section>
 </body>
-
+-->
+<!DOCTYPE HTML>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <script defer src="assets/js/main/drc.js"></script>
+    <script defer src="assets/js/main/buttons.js"></script>
+    <script defer src="assets/js/main/section2info.js"></script>
+    <link rel="stylesheet" href="assets/css/main/buttons.css">
+    <link rel="stylesheet" href="assets/css/main/text.css">
+    <title>Learning for everyone</title>
+</head>
+<body>
+    <h1>Learning for everyone</h1>
+    <section id="quickbuttons">
+    <button id="login">Login</button>
+    <button id="more">More</button>
+    </section>
+    <hr>
+    <h2>Welcome!</h2>
+    <p><a href="info.html/#s1">What is "learning for everyone"?</a> <a href="info.html/#s2">What do we do?</a> <a href="info.html/#s3">How can we help?</a></p>
+    <hr>
+    <div id="info">
