--- a/index.html
+++ b/index.html
@@ -47,4 +47,6 @@
     <h2>Welcome!</h2>
     <p><a href="info.html/#s1">What is "learning for everyone"?</a> <a href="info.html/#s2">What do we do?</a> <a href="info.html/#s3">How can we help?</a></p>
     <hr>
-    <div id="info">
+    <div id="info"></div>
+</body>
+
