--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
     <h2>Welcome!</h2>
     <p><a href="info.html/#s1">What is "learning for everyone"?</a> <a href="info.html/#s2">What do we do?</a> <a href="info.html/#s3">How can we help?</a></p>
     <hr>
-    <div id="info"></div>
+    <div id="info">
+  <h1><small>We served <span id="servedCount"></span> people</small></h1>
+  <h1><small>We currently have <span id="assignmentCount"></span> assignments hosted</small></h1>
+  <h1><small>We have <span id="userCount"></span> users</small></h1>
+</div>
 </body>
+
 
