--- a/login/index.html
+++ b/login/index.html
@@ -3,11 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="assets/css/main.css">
-	<script defer src="drc.js"></script>
+	<script defer src="main.js"></script>
 	<title>Login to platform</title>
-	<script>
-		localStorage.clear();
-	</script>
 </head>
 <body>
 	<body>
@@ -96,6 +93,7 @@ document.getElementById("loginBtn").onclick = async () => {
 </script>
 
 </body>
+
 
 
 
