--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
   <h4><small>We served <span id="servedCount"></span> people</small></h4>
   <h4><small>We currently have <span id="assignmentCount"></span> assignments hosted</small></h4>
   <h4><small>We have <span id="userCount"></span> users</small></h4>
+    <hr>
+    <p><a href="mailto:yucheng.lee29@gmail.com">Help</a></p>
 </div>
 </body>
+
 
 
 
