--- a/user/index.html
+++ b/user/index.html
@@ -13,6 +13,10 @@
   <h1>Pick an option</h1>
   <hr>
   <p><a href="assignments/">Assignments</a></p>
+  <p><a href="credits/">Credits</a></p>
+  <p><a href="terms/">Terms and Conditions</a></p>
+  <p><a href="privacy/">Privacy Policy</a></p>
   <hr>
   <p><a href="../logout.html">Logout</a></p>
 </body>
+
