--- a/user/assignments/index.html
+++ b/user/assignments/index.html
@@ -15,5 +15,7 @@ if (!localStorage.getItem("sessionUser")) {
   <p><em>Select one...</em></p>
   <div id="feed"></div>
   <script src="assets/js/loadItems.js"></script>
+  <hr>
+  <p><a href="../../logout.html">Logout</a></p>
 </body>
 </html>
