--- a/user/privacy/index.html
+++ b/user/privacy/index.html
@@ -4,6 +4,11 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Privacy Policy for Learning for everyone</title></head>
+      <script>
+if (!localStorage.getItem("sessionUser")) {
+  location.href = "https://andy-and-terry.github.io/learningforeveryone";
+}
+</script>
 <body>
 <div class="page">
 
