--- a/user/terms/index.html
+++ b/user/terms/index.html
@@ -6,6 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="./index_files/livelink.css">
+      <script>
+if (!localStorage.getItem("sessionUser")) {
+  location.href = "https://andy-and-terry.github.io/learningforeveryone";
+}
+</script>
 
 </head>
 <body>
