--- a/user/privacy/index.html
+++ b/user/privacy/index.html
@@ -4,11 +4,13 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Privacy Policy for Learning for everyone</title></head>
+    <link rel="stylesheet" href="index_files/livelink.css">
       <script>
 if (!localStorage.getItem("sessionUser")) {
   location.href = "https://andy-and-terry.github.io/learningforeveryone";
 }
 </script>
+</head>
 <body>
 <div class="page">
 
