--- a/user/credits/index.html
+++ b/user/credits/index.html
@@ -14,7 +14,8 @@
 	<h1>Credits</h1>
 	<hr>
 	<div id="info">
-	<p><span id="currenttext"></span></p>
+	<p><span id="creditsText"></span></p>
 	</div>
 	<button id="back">Back</button>
+
 </body>
