--- a/user/credits/index.html
+++ b/user/credits/index.html
@@ -13,9 +13,8 @@
 <body>
 	<h1>Credits</h1>
 	<hr>
-	<div id="info">
-	<p><span id="creditsText"></span></p>
-	</div>
+	<div id="creditsText"></div>
 	<button id="back">Back</button>
 
 </body>
+
